Fix: corrección de alineación SEPA 19-14 y descuadre de registros en R05/R99